# forex-agentic-daytrader

./: .gitignore  main.py  pyproject.toml
config/: __init__.py  forex.py  loaders.py
config/file/: model.yaml  pair.yaml
data/: __init__.py  base.py  func.py  run.py
data/production/csv/: EURUSD21-11-2025 10-46-56.csv  EURUSD30-11-2025 12-19-10.csv
data/production/json/: EURUSD21-11-2025 10-46-56.json  EURUSD30-11-2025 11-54-04.json
data/production/logs/: 21-11-2025-104656.txt  30-11-2025-123634.txt
data/training/csv/: EURUSD21-11-2025 10-46-25.csv
data/training/json/: EURUSD21-11-2025 10-46-25.json
data/training/logs/: 21-11-2025-104625.txt
model/: __init__.py  base.py  train.py  transformer.py  util.py
model/keras/: GRU_EURUSD_SEQUENTIAL_FORECASTER_20251122_105248.keras  GRU_EURUSD_SEQUENTIAL_FORECASTER_20251130_113040.keras  GRU_EURUSD_SEQUENTIAL_FORECASTER_20251130_121545.keras
model/rule/: governance.csv
model/rule/predict/: dfecfNrs-30-11-2025-EURUSD.csv  fKAqQLhF-30-11-2025-EURUSD.csv
model/scaler/: SCALER_EURUSD_SEQUENTIAL_FORECASTER_20251130_121545.pkl
